# RAGify

./: .coverage  .dockerignore  .env.example  .gcloudignore  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ci  README.md  README_CI_TESTING.md  SECURITY.md  alembic.ini  build.sh  coverage.xml  docker-compose.yml  linter.sh  pyproject.toml  ragify.db  requirements-docker.txt  reset_db.py  run_local_stack.sh  startup.sh  startupdocker.sh  test_ci_locally.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: edb084f40a3e_add_application_id_to_documents_table.py
backend/: main.py
backend/api/v1/: __init__.py
backend/core/: async_tasks.py  cache.py  config.py  database.py  security.py
backend/modules/applications/: crud.py  models.py  service.py
backend/modules/knowledge/: crud.py  models.py  processing.py
backend/modules/models/: model_manager.py  providers.py
backend/modules/rag/: embedding.py  embedding_service.py  rag_pipeline.py  retrieval.py
docker/: backend-base.Dockerfile
docs/: api.md  db_setup.md  deployment.md  development.md  setup.md  usage.md
examples/: README.md
examples/data/applications/: api_documentation.json  codebase_qa.json  customer_support.json  hr_assistant.json  (+4 more)
examples/scripts/: load_examples.py  reset_examples.py  validate_examples.py
examples/tests/: test_example_functionality.py  test_example_loading.py
frontend/: Dockerfile  chat.html  index.html  knowledge.html  settings.html
frontend/src/: style.css
shared/models/: Application.py  ChatMessage.py  Document.py  KnowledgeBase.py  Model.py
shared/utils/: text_processing.py
tests/: conftest.py  requirements.txt  test_api_endpoints.py  test_basic_structure.py  test_crud.py  test_embeddings.py  test_integration.py  test_rag_citations.py  test_services.py
(+33 files in other folders)
